Fixes to the swagger endpoint for evaluations where the patient Id param was missing. Added simple patient for the search results page. Added exception to patient service. Updated the patient creation controller so that it returns a string of the ID that has been created.
