# src/main/java/io/swagger/model/PatientSimpleDto.java
@@ -1,0 +1,222 @@
+package io.swagger.model;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonValue;
+import io.swagger.annotations.ApiModelProperty;
+
+import java.time.LocalDate;
+import java.util.Objects;
+/**
+ * PatientSimpleDto
+ */
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-04-12T16:18:34.486-04:00")
+
+public class PatientSimpleDto   {
+  @JsonProperty("id")
+  private Long id = null;
+
+  @JsonProperty("firstName")
+  private String firstName = null;
+
+  @JsonProperty("lastName")
+  private String lastName = null;
+
+  /**
+   * Gets or Sets sex
+   */
+  public enum SexEnum {
+    MALE("MALE"),
+
+    FEMALE("FEMALE");
+
+    private String value;
+
+    SexEnum(String value) {
+      this.value = value;
+    }
+
+    @Override
+    @JsonValue
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static SexEnum fromValue(String text) {
+      for (SexEnum b : SexEnum.values()) {
+        if (String.valueOf(b.value).equals(text)) {
+          return b;
+        }
+      }
+      return null;
+    }
+  }
+
+  @JsonProperty("sex")
+  private SexEnum sex = null;
+
+  @JsonProperty("dateOfBirth")
+  private LocalDate dateOfBirth = null;
+
+  @JsonProperty("valid")
+  private Boolean valid = null;
+
+  public PatientSimpleDto id(Long id) {
+    this.id = id;
+    return this;
+  }
+
+   /**
+   * Get id
+   * @return id
+  **/
+  @ApiModelProperty(value = "")
+  public Long getId() {
+    return id;
+  }
+
+  public void setId(Long id) {
+    this.id = id;
+  }
+
+  public PatientSimpleDto firstName(String firstName) {
+    this.firstName = firstName;
+    return this;
+  }
+
+   /**
+   * Get firstName
+   * @return firstName
+  **/
+  @ApiModelProperty(value = "")
+  public String getFirstName() {
+    return firstName;
+  }
+
+  public void setFirstName(String firstName) {
+    this.firstName = firstName;
+  }
+
+  public PatientSimpleDto lastName(String lastName) {
+    this.lastName = lastName;
+    return this;
+  }
+
+   /**
+   * Get lastName
+   * @return lastName
+  **/
+  @ApiModelProperty(value = "")
+  public String getLastName() {
+    return lastName;
+  }
+
+  public void setLastName(String lastName) {
+    this.lastName = lastName;
+  }
+
+  public PatientSimpleDto sex(SexEnum sex) {
+    this.sex = sex;
+    return this;
+  }
+
+   /**
+   * Get sex
+   * @return sex
+  **/
+  @ApiModelProperty(value = "")
+  public SexEnum getSex() {
+    return sex;
+  }
+
+  public void setSex(SexEnum sex) {
+    this.sex = sex;
+  }
+
+  public PatientSimpleDto dateOfBirth(LocalDate dateOfBirth) {
+    this.dateOfBirth = dateOfBirth;
+    return this;
+  }
+
+   /**
+   * Get dateOfBirth
+   * @return dateOfBirth
+  **/
+  @ApiModelProperty(value = "")
+  public LocalDate getDateOfBirth() {
+    return dateOfBirth;
+  }
+
+  public void setDateOfBirth(LocalDate dateOfBirth) {
+    this.dateOfBirth = dateOfBirth;
+  }
+
+  public PatientSimpleDto valid(Boolean valid) {
+    this.valid = valid;
+    return this;
+  }
+
+   /**
+   * Get valid
+   * @return valid
+  **/
+  @ApiModelProperty(value = "")
+  public Boolean getValid() {
+    return valid;
+  }
+
+  public void setValid(Boolean valid) {
+    this.valid = valid;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    PatientSimpleDto patientSimpleDto = (PatientSimpleDto) o;
+    return Objects.equals(this.id, patientSimpleDto.id) &&
+        Objects.equals(this.firstName, patientSimpleDto.firstName) &&
+        Objects.equals(this.lastName, patientSimpleDto.lastName) &&
+        Objects.equals(this.sex, patientSimpleDto.sex) &&
+        Objects.equals(this.dateOfBirth, patientSimpleDto.dateOfBirth) &&
+        Objects.equals(this.valid, patientSimpleDto.valid);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, firstName, lastName, sex, dateOfBirth, valid);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class PatientSimpleDto {\n");
+
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    firstName: ").append(toIndentedString(firstName)).append("\n");
+    sb.append("    lastName: ").append(toIndentedString(lastName)).append("\n");
+    sb.append("    sex: ").append(toIndentedString(sex)).append("\n");
+    sb.append("    dateOfBirth: ").append(toIndentedString(dateOfBirth)).append("\n");
+    sb.append("    valid: ").append(toIndentedString(valid)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
