# src/main/java/org/flinnfoundation/controller/PatientController.java
@@ -1,14 +1,15 @@
 package org.flinnfoundation.controller;
 
 import io.swagger.api.PatientApi;
-import io.swagger.model.EvaluationDto;
 import io.swagger.model.PatientDto;
+import io.swagger.model.PatientSimpleDto;
 import lombok.extern.slf4j.Slf4j;
 import org.flinnfoundation.mapper.PatientMapper;
+import org.flinnfoundation.mapper.PatientSimpleMapper;
 import org.flinnfoundation.model.DiagnosisType;
+import org.flinnfoundation.model.Patient;
 import org.flinnfoundation.service.PatientService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -23,16 +24,18 @@ public class PatientController implements PatientApi {
 
     private PatientService patientService;
     private PatientMapper patientMapper;
+    private PatientSimpleMapper patientSimpleMapper;
 
     @Autowired
-    public PatientController(PatientService patientService, PatientMapper patientMapper) {
+    public PatientController(PatientService patientService, PatientMapper patientMapper, PatientSimpleMapper patientSimpleMapper) {
         this.patientService = patientService;
         this.patientMapper = patientMapper;
+        this.patientSimpleMapper = patientSimpleMapper;
     }
 
     @Override
     public ResponseEntity<List<PatientDto>> getPatients() {
-        return new ResponseEntity<>(patientMapper.convertModelToApiDto(patientService.getPatients()), HttpStatus.OK);
+        return ResponseEntity.ok(patientMapper.convertModelToApiDto(patientService.getPatients()));
     }
 
     @Override
@@ -48,11 +51,21 @@ public class PatientController implements PatientApi {
     }
 
     @Override
-    public ResponseEntity<EvaluationDto> createPatient(@RequestBody PatientDto patient) {
+    public ResponseEntity<List<PatientSimpleDto>> getPatientsSimple() {
+        return ResponseEntity.ok(patientSimpleMapper.convertModelToApiDto(patientService.getPatients()));
+    }
 
-        patientService.createPatient(patientMapper.convertApiDtoToModel(patient));
+    @Override
+    public ResponseEntity<PatientSimpleDto> getPatientSimpleById(@PathVariable Long patientId) {
+        return ResponseEntity.ok(patientSimpleMapper.convertModelToApiDto(patientService.getPatient(patientId)));
+    }
 
-        return null;
+    @Override
+    public ResponseEntity<String> createPatient(@RequestBody PatientDto patientDto) {
+
+        Patient patient = patientService.createPatient(patientMapper.convertApiDtoToModel(patientDto));
+
+        return ResponseEntity.ok(Long.toString(patient.getId()));
 
     }
 }
